# Axiom

./: .gitattributes  .gitignore  .gitmodules  ALL_BUILD.vcxproj  Axiom.sln  CMakeLists.txt  FUNDING.yml  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  compileData.scor  compileData.scor.incl  compileData.scor.t0000
Axiom/: Axiom.vcxproj  Axiom.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters
Axiom/src/Axiom/: CoreMinimal.hpp  Engine.hpp
Axiom/src/Axiom/App/: Application.cpp  Application.hpp  EntryPoint.cpp  PlatformBase.hpp  SystemWindow.cpp  SystemWindow.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
Axiom/src/Axiom/App/UI/: UIWindow.cpp  UIWindow.hpp  Widget.cpp  Widget.hpp
Axiom/src/Axiom/Core/: Algorithms.hpp  Allocator.cpp  Allocator.hpp  Archive.hpp  Array.hpp  AssetManager.cpp  AssetManager.hpp  Bitset.hpp  BlockAllocator.cpp  BlockAllocator.hpp  Buffer.hpp  CMBAllocator.cpp  CMBAllocator.hpp  Common.hpp  Enum.hpp  Hash.hpp  HashBase.hpp  Logger.cpp  Logger.hpp  MacroBase.hpp  Memory.cpp  Memory.hpp  MemoryArchive.hpp  New.hpp  Optional.hpp  Pair.hpp  Queue.hpp  Random.hpp  RawByteStorage.hpp  Reflection.cpp  Reflection.hpp  ScopedTimer.hpp  SharedPtr.hpp  Span.hpp  Stack.hpp  String.cpp  String.hpp  StringView.hpp  TemplateBase.hpp  Timer.hpp  (+7 more)
Axiom/src/Axiom/Core/Containers/: LinkedList.hpp  ObjArray.hpp  Queue.hpp  Stack.hpp
Axiom/src/Axiom/CoreSystems/: WindowManagerSystem.hpp
Axiom/src/Axiom/Framework/: ECS.hpp  Object.hpp
Axiom/src/Axiom/Graphics/: RenderDevice.cpp  RenderDevice.hpp
Axiom/src/Axiom/Math/: All.hpp  Camera.hpp  Color.hpp  Math.hpp  MathConstants.hpp  Matrix.hpp  Matrix3.hpp  Matrix4.hpp  Matrix4d.hpp  Quaternion.hpp  SIMDCommon.hpp  Transform.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Axiom/src/Axiom/MultiThreading/: Common.hpp  ParallelFor.cpp  ParallelFor.hpp  Semaphore.hpp  ThreadPool.cpp  ThreadPool.hpp
Axiom/src/Axiom/Render/: Buffer.hpp  CommandList.hpp  DeviceContext.hpp  Material.hpp  Mesh.hpp  PipelineState.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  SwapChain.hpp  Types.hpp  stb_image.h
Axiom/src/Axiom/Render/DX12/: D3D12Buffers.hpp  D3D12CommandList.cpp  D3D12CommandList.hpp  D3D12CommonHeaders.hpp  D3D12Context.cpp  D3D12Context.hpp  D3D12Core.cpp  D3D12Core.hpp  D3D12MemoryAllocator.cpp  D3D12MemoryAllocator.hpp  D3D12Renderer.cpp  D3D12Renderer.hpp  D3D12Resource.hpp  D3D12SwapChain.cpp  D3D12SwapChain.hpp  DX12Buffers.hpp  DX12Shader.cpp  DX12Shader.hpp  d3d12x.h
AxiomEditor/: ALL_BUILD.vcxproj  AxiomEditor.sln  AxiomEditor.vcxproj  AxiomEditor.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters
AxiomEditor/src/AxiomEditor/: EditorApplication.cpp  EditorApplication.hpp
AxiomEditor/src/Editor/: EditorApplication.cpp
AxiomHeaderTool/: CMakeLists.txt
AxiomHeaderTool/src/: Lexer.cpp  Lexer.hpp  Main.cpp  ReflectionTypes.hpp  TypeGenerators.hpp
AxiomPlatform/: AxiomPlatform.sln  CMakeLists.txt
AxiomPlatform/src/AxiomPlatform/GLFW/: GLFWWindow.cpp  GLFWWindow.hpp
AxiomPlatform/src/GLFW/AxiomPlatform/App/: GLFW.hpp  GLFWEvents.cpp  GLFWEvents.hpp  GLFWWindow.cpp  GLFWWindow.hpp
AxiomPlatform/src/Windows/AxiomPlatform/App/: WindowsPlatform.cpp
AxiomTests/: CMakeLists.txt
AxiomTests/src/AxiomTests/: EntryPoint.cpp
AxiomTests/src/AxiomTests/Core/: TestArray.cpp  TestReflection.cpp  TestScopedTimer.cpp  TestSpan.cpp  TestString.cpp  TestStringView.cpp  TestUnorderedMap.cpp  TestUnorderedSet.cpp
CMake/: AxiomTargetTools.cmake
EngineAssets/Shaders/: PBR.hlsl
lib/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/doctest/: doctest.h
src/: main.cpp
src/Axiom/App/: Application.cpp  Application.hpp  EntryPoint.cpp  SystemWindow.cpp  SystemWindow.hpp
src/Axiom/Core/: Array.hpp  CMBAllocator.cpp  CMBAllocator.hpp  Common.hpp  Enum.hpp  Library.hpp  Logger.cpp  Logger.hpp  Pair.hpp  ScopedTimer.hpp  String.hpp  TemplateBase.hpp
src/Axiom/Core/Containers/: ObjArray.hpp  Stack.hpp
src/Axiom/Framework/: ECS.hpp  Object.hpp
src/Axiom/Framework/ECS/: Registry.hpp
src/Axiom/Graphics/: RenderDevice.cpp  RenderDevice.hpp
src/Axiom/Math/: All.hpp  Color.hpp  Math.hpp  Matrix4.h  Matrix4.hpp  Matrix4d.h  Matrix4d.hpp  Quaternion.hpp  Vector.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
